--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,116 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- PON UN FAVICON!!! -->
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon-32x32.png"
+      type="image/png"
+    />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- CAMBIA EL TITLE!!! -->
-    <title>Vite Template</title>
+    <title>Skilled elearning landing page</title>
   </head>
   <body>
-    
+    <header class="header">
+      <div class="top-bar">
+        <img src="./assets/images/logo-dark.svg" alt="logo" />
+        <a class="button button--blue" href="#">Get Started</a>
+      </div>
+      <div class="skilled__info">
+        <h1 class="title">Maximize skill, minimize budget</h1>
+        <p class="text">
+          Our modern courses across a range of in-demand skills will give you
+          the knowledge you need to live the life you want.
+        </p>
+        <a class="button button--gradiant" href="#">Get Started</a>
+      </div>
+      <img
+        class="image"
+        src="./assets/images/image-hero-mobile.png"
+        alt="hero"
+      />
+    </header>
+    <main class="main">
+      <div class="items">
+        <p class="text text--bold">Check out our most popular courses!</p>
+        <section class="card">
+          <img
+            class="card__icon"
+            src="./assets/images/icon-animation.svg"
+            alt="animation"
+          />
+          <h2 class="subtitle">Animation</h2>
+          <p class="text text-card">
+            Learn the latest animation techniques to create stunning motion
+            design and captivate your audience.
+          </p>
+          <a class="button button--pink" href="#">Get Started</a>
+        </section>
+        <section class="card">
+          <img
+            class="card__icon"
+            src="./assets/images/icon-design.svg"
+            alt="design"
+          />
+          <h2 class="subtitle">Design</h2>
+          <p class="text text-card">
+            Create beautiful, usable interfaces to help shape the future of how
+            the web looks.
+          </p>
+          <a class="button button--pink" href="#">Get Started</a>
+        </section>
+        <section class="card">
+          <img
+            class="card__icon"
+            src="./assets/images/icon-photography.svg"
+            alt="Photography"
+          />
+          <h2 class="subtitle">Photography</h2>
+          <p class="text text-card">
+            Explore critical fundamentals like lighting, composition, and focus
+            to capture exceptional photos.
+          </p>
+          <a class="button button--pink" href="#">Get Started</a>
+        </section>
+        <section class="card">
+          <img
+            class="card__icon"
+            src="./assets/images/icon-crypto.svg"
+            alt="crypto"
+          />
+          <h2 class="subtitle">Crypto</h2>
+          <p class="text text-card">
+            All you need to know to get started investing in crypto. Go from
+            beginner to advanced with this 54 hour course.
+          </p>
+          <a class="button button--pink" href="#">Get Started</a>
+        </section>
+        <section class="card">
+          <img
+            class="card__icon"
+            src="./assets/images/icon-business.svg"
+            alt="business"
+          />
+          <h2 class="subtitle">Business</h2>
+          <p class="text text-card">
+            A step-by-step playbook to help you start, scale, and sustain your
+            business without outside investment.
+          </p>
+          <a class="button button--pink" href="#">Get Started</a>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <img src="./assets/images/logo-light.svg" alt="logo" />
+      <a class="button button--footer" href="#">Get Started</a>
+    </footer>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
